src/components/carousel/carousel.styles.css
.carousel-image {
  height: 40vh; 
  object-fit: cover;
  border-radius: 5px;
}
.carousel-caption{
  background: rgba(64, 74, 62, 0.5); 
  border-radius: 0.5rem; 
  
}
.carousel-text {
  color: white;
  font-size: 2rem;
  line-height: 2rem;
  font-weight: bold;
}

@media (min-width: 768px) {
  .carousel-image{
    height: 50vh;
  }
  .carousel-text {
    font-size: 2rem; 
    line-height: 5rem;
  }
}

@media (min-width: 1420px) {
  .carousel-image {
    height: 60vh; 
  }
  .carousel-text {
    font-size: 3rem;
    line-height: 6rem;
    padding: 2rem;
    letter-spacing: 2px;
  }
}

